# emosic

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.md
bff/: emo_api.py  main.py  spotify_api.py
bff/api_handler/: dummy.json  recommendation.py  spotify_interface.py
docker/bff/: Dockerfile.dev  Dockerfile.prod  requirements.txt
docker/nginx/: nginx.conf
docker/nginx/prod/: nginx.conf
docker/rust-app/: Dockerfile.dev
docs/: microservice-architecture.drawio
emotional-analysis-api/: .gitignore  LICENSE  Makefile  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml  model-install.sh
emotional-analysis-api/.github/workflows/: docker-image.yml
emotional-analysis-api/app/: emotional_analysis.py  main.py
emotional-analysis-api/docker/cpu/: Dockerfile  requirements.txt
emotional-analysis-api/docker/gpu/: Dockerfile  requirements.txt
rust-app/: Cargo.toml
rust-app/src/: main.rs  server.rs
rust-app/templates/: index.html  result_card.html  result_cheer_card.html  result_section.html  spotify_embed.html
rust-app/templates/assets/js/: index.js
